syntax = "proto3";

package pb;

import "trader.proto";
import "google/protobuf/timestamp.proto";

option go_package = "peerbill-server/pb";

message LoginTraderRequest {
    string        username = 1;
    string        password = 2;
}

message LoginTraderResponse {
    string access_token = 1;
    string session_id = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
    Trader trader = 6;
}